--- a/synnex-mvc-app-1/Views/Student/Index.cshtml
+++ b/synnex-mvc-app-1/Views/Student/Index.cshtml
@@ -6,11 +6,11 @@
 @{
 }
 
-<h2>Student List</h2>
+<h2 class="bg-dark text-light p-2">Student List</h2>
 
 @Html.ActionLink("Create New Student", "CreateStudent","Student", null, new {@class="btn btn-success text-end", @style="float:right;"})
 
-<table class="table table-border table-stripe">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Name</th>
