--- a/synnex-mvc-app-1/Views/Student/StudentDetails.cshtml
+++ b/synnex-mvc-app-1/Views/Student/StudentDetails.cshtml
@@ -6,7 +6,7 @@
 @{
 }
 
-<h2>Student details</h2>
+<h2 class="bg-dark text-light p-2">Student details</h2>
 
 <table class="table table-border table-stripe">    
     <tbody>
