--- a/synnex-mvc-app-1/wwwroot/css/site.css
+++ b/synnex-mvc-app-1/wwwroot/css/site.css
@@ -21,7 +21,7 @@ body {
   margin-bottom: 60px;
 }
 
-.field-validation-error{
+.field-validation-error, .validation-summary-errors{
     color:red;
 }
 
