--- a/synnex-mvc-app-1/Views/Student/CreateStudent.cshtml
+++ b/synnex-mvc-app-1/Views/Student/CreateStudent.cshtml
@@ -5,39 +5,50 @@
 @{
 }
 
+<h2 class="bg-dark text-light p-2">Create Student</h2>
 @*@Html.ValidationSummary(true)*@
 <div asp-validation-summary="ModelOnly"></div>
 <form method="post">
-@*@using (Html.BeginForm(actionName: "",controllerName:"", FormMethod:FormMethod.Post,antiforgery:true, )
-   {*@
-        @Html.AntiForgeryToken()
-        <div>
-    
-            <label asp-for="Name">Name</label>
+    @*@using (Html.BeginForm(actionName: "",controllerName:"", FormMethod:FormMethod.Post,antiforgery:true, )
+        {*@
+    @Html.AntiForgeryToken()
+    <div class="mt-3">
+        @*Usual HTML Tags example*@
+        @*<label>Name</label>*@
         @*<input name="Name"/>*@
-        @Html.TextBoxFor(m => m.Name, new { @class="form-control" })
-        <input asp-for="Name" class="form-control"/>
+
+        @*Html Tag Helper example*@
+        @*@Html.NameFor(m=>m.Name)*@
+        @*@Html.TextBoxFor(m => m.Name, new { @class="form-control" })*@
         @*<span>@Html.ValidationMessageFor(m => m.Name)</span>*@
+
+        @*ASP Tag Helper example*@
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name"></span>
     </div>
 
-    <div>
+    <div class="mt-3">
         <label asp-for="Age">Age</label>
-        @*<input name="Age"/>*@
-        @*@Html.EditorFor(m => m.Age)*@
-        <input asp-for="Age" />
-
+        <input asp-for="Age" class="form-control" />
         <span>@Html.ValidationMessageFor(m => m.Age)</span>
     </div>
 
-    <div>
-        <lable>Address</lable>
-        <input name="Address" />
+    <div class="mt-3">
+        <label asp-for="Address">Address</label>
+        <input asp-for="Address" class="form-control" />
+        <span>@Html.ValidationMessageFor(m => m.Address)</span>
     </div>
 
-    <div>
-        <button type="submit">Submit</button>
+    <div class="mt-3 row">
+        <div class="col-6">
+            <button type="submit" class="btn btn-primary form-control">Create</button>
+        </div>
+        <div class="col-6">
+            <button type="button" class="btn btn-secondary form-control">Cancel</button>
+        </div>
     </div>
-@*}*@
+    @*}*@
 
 </form>
+
