Added Cancel button functionality to Create Student Page

--- a/synnex-mvc-app-1/Views/Student/CreateStudent.cshtml
+++ b/synnex-mvc-app-1/Views/Student/CreateStudent.cshtml
@@ -45,7 +45,7 @@
             <button type="submit" class="btn btn-primary form-control">Create</button>
         </div>
         <div class="col-6">
-            <button type="button" class="btn btn-secondary form-control">Cancel</button>
+            <button type="button" class="btn btn-secondary form-control" onclick="window.location.replace('/student/index')">Cancel</button>
         </div>
     </div>
     @*}*@
