--- a/synnex-mvc-app-1/Views/_ViewImports.cshtml
+++ b/synnex-mvc-app-1/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using synnex_mvc_app_1
 @using synnex_mvc_app_1.Models
+@using synnex_mvc_app_1.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
